--- a/src/public/index.css
+++ b/src/public/index.css
@@ -25,4 +25,31 @@ body {
 main {
   width: 90%;
   flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-container,
+.task-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-container {
+  row-gap: 30px;
+}
+
+.task-container {
+  width: 100%;
+  row-gap: 20px;
+  padding: 20px 0;
+  max-width: 600px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
