--- a/src/public/index.css
+++ b/src/public/index.css
@@ -32,7 +32,8 @@ main {
 }
 
 .main-container,
-.task-container {
+.task-data-container,
+.tasks-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -45,7 +46,8 @@ main {
   row-gap: 30px;
 }
 
-.task-container {
+.task-data-container,
+.tasks-container {
   width: 100%;
   row-gap: 20px;
   padding: 20px 0;
