--- a/src/public/index.css
+++ b/src/public/index.css
@@ -55,3 +55,13 @@ main {
   border: 1px solid black;
   border-radius: 10px;
 }
+
+.task,
+.task-options,
+.inner {
+  display: flex;
+}
+
+.task-title {
+  flex: 2;
+}
