--- a/src/views/editTask.ejs
+++ b/src/views/editTask.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <%- include("partials/head"); %>
+    <script src="/authentication.js"></script>
   </head>
   <body>
     <div class="container">
