--- a/src/public/index.css
+++ b/src/public/index.css
@@ -46,6 +46,14 @@ main {
   row-gap: 30px;
 }
 
+.login-form,
+.sign-up-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .task-data-container,
 .tasks-container {
   width: 100%;
