--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,9 +8,9 @@
       <main>
         <div class="main-container">
           <div class="login-container">
-            <h1>Login</h1>
+            <h1>Log in</h1>
             <form class="login-form">
-              <input id="email" name="email" type="text" placeholder="Your email" />
+              <input id="email" name="email" type="email" placeholder="Your email" />
               <input id="password" name="password" type="password" placeholder="Your password" />
               <button type="submit">Login</button>
             </form>
