Set new css style and new font family

--- a/src/views/editTask.ejs
+++ b/src/views/editTask.ejs
@@ -10,23 +10,32 @@
         <div class="main-container">
           <div class="edit-task-container">
             <h1>Edit task</h1>
-            <form id="update-title-form">
-              <div class="inner">
-                <input id="title" name="email" type="text" placeholder="Edit title" />
-                <button id="update-title" type="submit">Update title</button>
-              </div>
-            </form>
-            <form id="update-description-form">
-              <div class="inner">
-                <input
-                  id="description"
-                  name="description"
-                  type="password"
-                  placeholder="Edit description"
-                />
-                <button id="update-description" type="submit">Update description</button>
-              </div>
-            </form>
+            <div class="forms-container">
+              <form id="update-title-form">
+                <div class="inner">
+                  <input
+                    id="title"
+                    class="input"
+                    name="email"
+                    type="text"
+                    placeholder="Edit title"
+                  />
+                  <button id="update-title" type="submit">Update</button>
+                </div>
+              </form>
+              <form id="update-description-form">
+                <div class="inner">
+                  <input
+                    id="description"
+                    class="input"
+                    name="description"
+                    type="password"
+                    placeholder="Edit description"
+                  />
+                  <button id="update-description" type="submit">Update</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </main>
