--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,8 +10,14 @@
           <div class="login-container">
             <h1>Log in</h1>
             <form class="login-form">
-              <input id="email" name="email" type="email" placeholder="Your email" />
-              <input id="password" name="password" type="password" placeholder="Your password" />
+              <input id="email" class="input" name="email" type="email" placeholder="Your email" />
+              <input
+                id="password"
+                class="input"
+                name="password"
+                type="password"
+                placeholder="Your password"
+              />
               <button type="submit">Login</button>
             </form>
           </div>
