--- a/src/public/index.css
+++ b/src/public/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Caveat", cursive;
 }
 
 html,
@@ -47,11 +48,85 @@ main {
 }
 
 .login-form,
-.sign-up-form {
+.sign-up-form,
+#submit-form,
+.forms-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+h1 {
+  font-size: clamp(1.625rem, 4vw, 3rem);
+}
+
+h2 {
+  font-size: clamp(1.4rem, 4vw, 2rem);
+}
+
+span,
+.input,
+#task-description,
+#edit-button,
+button {
+  font-size: clamp(1.2rem, 4vw, 1.5rem);
+}
+
+.input {
+  padding: 10px;
+}
+
+#submit-form,
+.forms-container {
+  row-gap: 10px;
+}
+
+#submit-form {
+  width: 90%;
+  max-width: 500px;
+}
+
+#input-task-title {
+  width: 100%;
+}
+
+.description-container {
+  width: 100%;
+}
+
+#task-description {
+  padding: 10px;
+  width: 100%;
+  height: 80px;
+  resize: none;
+}
+
+.description-counter {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+}
+
+button,
+#edit-button {
+  border: 1px solid black;
+  background: transparent;
+  padding: 0.4rem 0.8rem;
+  border-radius: 4px;
+  transition: all 0.2s ease-in-out;
+}
+
+button:hover,
+#edit-button:hover {
+  background: rgba(242, 202, 82, 0.2);
+}
+
+#edit-button {
+  display: grid;
+  place-items: center;
+  color: black;
+  text-decoration: none;
 }
 
 .task-data-container,
@@ -68,6 +143,7 @@ main {
 .task-options,
 .inner {
   display: flex;
+  align-items: center;
   column-gap: 10px;
 }
 
@@ -75,7 +151,7 @@ main {
   width: 90%;
 }
 
-.task-title {
+.task-data {
   flex: 2;
 }
 
