--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -9,9 +9,21 @@
         <div class="main-container">
           <h1>Sign Up</h1>
           <form class="sign-up-form">
-            <input id="username" name="username" type="text" placeholder="Your username" />
-            <input id="email" name="email" type="email" placeholder="Your email" />
-            <input id="password" name="password" type="password" placeholder="Your password" />
+            <input
+              id="username"
+              class="input"
+              name="username"
+              type="text"
+              placeholder="Your username"
+            />
+            <input id="email" class="input" name="email" type="email" placeholder="Your email" />
+            <input
+              id="password"
+              class="input"
+              name="password"
+              type="password"
+              placeholder="Your password"
+            />
             <button type="submit">Sign Up</button>
           </form>
         </div>
