--- a/src/public/index.css
+++ b/src/public/index.css
@@ -50,7 +50,10 @@ main {
 .login-form,
 .sign-up-form,
 #submit-form,
-.forms-container {
+.forms-container,
+.edit-task-container,
+.login-container,
+.sign-up-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -78,7 +81,12 @@ button {
 }
 
 #submit-form,
-.forms-container {
+.forms-container,
+.edit-task-container,
+.login-container,
+.sign-up-container,
+.login-form,
+.sign-up-form {
   row-gap: 10px;
 }
 
@@ -130,7 +138,10 @@ button:hover,
 }
 
 .task-data-container,
-.tasks-container {
+.tasks-container,
+.edit-task-container,
+.login-container,
+.sign-up-container {
   width: 100%;
   row-gap: 20px;
   padding: 20px 0;
