--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -7,25 +7,27 @@
     <div class="container">
       <main>
         <div class="main-container">
-          <h1>Sign Up</h1>
-          <form class="sign-up-form">
-            <input
-              id="username"
-              class="input"
-              name="username"
-              type="text"
-              placeholder="Your username"
-            />
-            <input id="email" class="input" name="email" type="email" placeholder="Your email" />
-            <input
-              id="password"
-              class="input"
-              name="password"
-              type="password"
-              placeholder="Your password"
-            />
-            <button type="submit">Sign Up</button>
-          </form>
+          <div class="sign-up-container">
+            <h1>Sign Up</h1>
+            <form class="sign-up-form">
+              <input
+                id="username"
+                class="input"
+                name="username"
+                type="text"
+                placeholder="Your username"
+              />
+              <input id="email" class="input" name="email" type="email" placeholder="Your email" />
+              <input
+                id="password"
+                class="input"
+                name="password"
+                type="password"
+                placeholder="Your password"
+              />
+              <button type="submit">Sign Up</button>
+            </form>
+          </div>
         </div>
       </main>
     </div>
