--- a/src/views/editTask.ejs
+++ b/src/views/editTask.ejs
@@ -13,13 +13,7 @@
             <div class="forms-container">
               <form id="update-title-form">
                 <div class="inner">
-                  <input
-                    id="title"
-                    class="input"
-                    name="email"
-                    type="text"
-                    placeholder="Edit title"
-                  />
+                  <input id="title" class="input" name="title" placeholder="Edit title" />
                   <button id="update-title" type="submit">Update</button>
                 </div>
               </form>
@@ -29,7 +23,6 @@
                     id="description"
                     class="input"
                     name="description"
-                    type="password"
                     placeholder="Edit description"
                   />
                   <button id="update-description" type="submit">Update</button>
