Create span elements to append them on each input to show the message error

--- a/src/public/index.css
+++ b/src/public/index.css
@@ -100,6 +100,18 @@ button {
   padding: 10px;
 }
 
+.error {
+  width: 100%;
+  display: block;
+  background: red;
+  color: white;
+  text-align: center;
+}
+
+.none {
+  display: none;
+}
+
 #submit-form,
 .forms-container,
 .edit-task-container,
