--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -31,6 +31,6 @@
         </div>
       </main>
     </div>
-    <script src="/signUp.js"></script>
+    <script src="/signUp.js" type="module"></script>
   </body>
 </html>
