--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,20 +10,31 @@
           <div class="login-container">
             <h1>Log in</h1>
             <form class="login-form">
-              <input id="email" class="input" name="email" type="email" placeholder="Your email" />
-              <input
-                id="password"
-                class="input"
-                name="password"
-                type="password"
-                placeholder="Your password"
-              />
+              <div>
+                <input
+                  id="email"
+                  class="input"
+                  name="email"
+                  type="email"
+                  placeholder="Your email"
+                />
+              </div>
+              <div>
+                <input
+                  id="password"
+                  class="input"
+                  name="password"
+                  type="password"
+                  placeholder="Your password"
+                />
+              </div>
+
               <button type="submit">Log in</button>
             </form>
           </div>
         </div>
       </main>
     </div>
-    <script src="/login.js"></script>
+    <script src="/login.js" type="module"></script>
   </body>
 </html>
