--- a/src/public/index.css
+++ b/src/public/index.css
@@ -203,3 +203,14 @@ a {
 .completed {
   color: green;
 }
+
+.login-loader,
+.sign-up-loader,
+.update-title-loader,
+.update-description-loader {
+  display: none;
+}
+
+.show {
+  display: block;
+}
