--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -29,7 +29,8 @@
                 />
               </div>
 
-              <button type="submit">Log in</button>
+              <button id="login-button" type="submit">Log in</button>
+              <img class="login-loader" src="/oval.svg" alt="Loader" />
             </form>
           </div>
         </div>
