Set loader when user is signing up and submiting a task

--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -25,7 +25,8 @@
                 type="password"
                 placeholder="Your password"
               />
-              <button type="submit">Sign Up</button>
+              <button id="sign-up-button" type="submit">Sign Up</button>
+              <img class="sign-up-loader" src="/oval.svg" alt="Loader" />
             </form>
           </div>
         </div>
