--- a/src/views/tasks.ejs
+++ b/src/views/tasks.ejs
@@ -28,6 +28,7 @@
                 </div>
               </div>
               <button id="submit-button" type="submit">Submit</button>
+              <img class="submit-loader" src="/oval.svg" alt="Loader" />
             </form>
           </section>
           <section class="tasks-container">
