Set loader when user is updating a task

--- a/src/views/editTask.ejs
+++ b/src/views/editTask.ejs
@@ -14,7 +14,8 @@
               <form id="update-title-form">
                 <div class="inner">
                   <input id="title" class="input" name="title" placeholder="Edit title" />
-                  <button id="update-title" type="submit">Update</button>
+                  <button id="update-title-button" type="submit">Update</button>
+                  <img class="update-title-loader" src="/oval.svg" alt="Loader" />
                 </div>
               </form>
               <form id="update-description-form">
@@ -25,7 +26,8 @@
                     name="description"
                     placeholder="Edit description"
                   />
-                  <button id="update-description" type="submit">Update</button>
+                  <button id="update-description-button" type="submit">Update</button>
+                  <img class="update-description-loader" src="/oval.svg" alt="Loader" />
                 </div>
               </form>
             </div>
