--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -10,21 +10,33 @@
           <div class="sign-up-container">
             <h1>Sign Up</h1>
             <form class="sign-up-form">
-              <input
-                id="username"
-                class="input"
-                name="username"
-                type="text"
-                placeholder="Your username"
-              />
-              <input id="email" class="input" name="email" type="email" placeholder="Your email" />
-              <input
-                id="password"
-                class="input"
-                name="password"
-                type="password"
-                placeholder="Your password"
-              />
+              <div>
+                <input
+                  id="username"
+                  class="input"
+                  name="username"
+                  type="text"
+                  placeholder="Your username"
+                />
+              </div>
+              <div>
+                <input
+                  id="email"
+                  class="input"
+                  name="email"
+                  type="email"
+                  placeholder="Your email"
+                />
+              </div>
+              <div>
+                <input
+                  id="password"
+                  class="input"
+                  name="password"
+                  type="password"
+                  placeholder="Your password"
+                />
+              </div>
               <button id="sign-up-button" type="submit">Sign Up</button>
               <img class="sign-up-loader" src="/oval.svg" alt="Loader" />
             </form>
